# ravenx-agentic-layer

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: behavior-autoresearch-loop.md  comparative-intake.md  implementation-spec-v0.md
src/: index.md
src/ravenx_agentic_layer/: __init__.py  autoresearch.py  cli.py  contracts.py  handoff.py  looprunner.py  openclaw.py  profiles.py  router.py  runtime.py  skills.py  verification.py
tests/: test_autoresearch.py  test_looprunner.py  test_router.py  test_runtime.py
