[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ravenx-agentic-layer"
version = "0.1.0"
description = "Minimal runtime scaffold for the RavenX agentic layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RavenX AI" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
